--- a/youtubeu_bw1.ipynb
+++ b/youtubeu_bw1.ipynb
@@ -2620,6 +2620,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 250 entries, 0 to 249\n",
+      "Data columns (total 5 columns):\n",
+      "videoId         250 non-null object\n",
+      "channelTitle    250 non-null object\n",
+      "description     250 non-null object\n",
+      "publishedAt     250 non-null object\n",
+      "title           250 non-null object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 9.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "ytu.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
