--- a/youtubeu_bw1.ipynb
+++ b/youtubeu_bw1.ipynb
@@ -3063,15 +3063,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter 0, loss: 1785.236598\n",
-      "iter 100, loss: 186.267287\n"
+      "iter 0, loss: 1979.375246\n",
+      "iter 100, loss: 131.371121\n",
+      "iter 200, loss: 99.681579\n",
+      "iter 300, loss: 52.423281\n",
+      "iter 400, loss: 23.950352\n",
+      "iter 500, loss: 11.468705\n",
+      "iter 600, loss: 6.701296\n",
+      "iter 700, loss: 4.541539\n",
+      "iter 800, loss: 3.329871\n",
+      "iter 900, loss: 2.508246\n",
+      "CPU times: user 4h 44min 46s, sys: 2min 44s, total: 4h 47min 31s\n",
+      "Wall time: 47min 58s\n"
      ]
     }
    ],
@@ -3095,7 +3105,7 @@
     "            \n",
     "        if (data_pointer+sequence_length+1 >= len(ytu_desc) and b == batch_size-1): # processing of the last part of the input data. \n",
     "#             targets.append(char_to_int[txt_data[0]])   # When the data doesn't fit, add the first char to the back.\n",
-    "            targets.append(char_to_int[\"\"])   # When the data doesn't fit, add space(\" \") to the back.\n",
+    "            targets.append(char_to_int[''])   # When the data doesn't fit, add space(\" \") to the back.\n",
     "\n",
     "\n",
     "        # forward\n",
@@ -3121,36 +3131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----\n",
+      " Description Using pandas and scikit-learn together can be a bit clunky. For complex preprocessing, the scikit-learn Pipeline conveniently chains together ...http://www.slideshare.net/PyData/gradient-boosted-regression-trees-in-scikit-learn-gilles-louppe This talk describes Gradient Boosted Regression Trees (GBRT) ...Speed coding Tinder in 60 minutes using React. This is a basic create react app setup, no funny business, just standard JavaScript functions! The most ...The video course will be available September 7, 2010. http://www.scotthyoung.com/lmslvidcourse/Node.js Tutorial for Beginners: Learn Node in 1 Hour Get the COMPLETE Course (45% OFF - LIMITED TIME): https://programmingwithmosh.com/courses/node ...In this machine learning series I will work on the Wisconsin Breast Cancer dataset that comes with scikit-learn. I will train a few algorithms and evaluate their ...http://BuildingFaithFamilies.org Steve Demme teaches how to learn the Greek alphabet.i premiered this cuz fanis sorrymasen for not uploading also i made this and dis is sad but we live in a societ also im leolide paul here is merch im manipulating u ...Learn React.js from scratch and use one of the most popular frontend libraries to build amazing web apps! Limited Offer! Join the Full React.js Course at 90% off: ...MobX is AWESOME. It makes React.js programming fun and it...just...works. GET THE CODE: ...In this episode we are going to learn everything about state management in React. The reason you might need a state management tool like the context api or ...Redux tutorial Part 2 of the React Redux series, Where you learn Redux with a simple example using only Redux without react. by create store, add reducers, ...ReactJS Training - https://www.edureka.co/reactjs-redux-certification-training ** This Edureka ReactJS Tutorial For Beginners will help you learn ReactJS ...Learn how to use props in React and how to check the data types flowing through your app using React PropTypes. * React Cheat Sheet ...Learn Redux (with React) with this tutorial! All the major parts in one video. SUBSCRIBE, LIKE, and COMMENT to support the channel =). Click on the times ... \n",
+      "----\n"
+     ]
+    }
+   ],
    "source": [
-    "def predict(test_char, length):\n",
-    "    x = np.zeros((num_chars, 1)) \n",
-    "    x[char_to_int[test_char]] = 1\n",
-    "    ixes = []\n",
-    "    h = np.zeros((hidden_size,1))\n",
-    "\n",
-    "    for t in range(length):\n",
-    "        h = np.tanh(np.dot(W_xh, x) + np.dot(W_hh, h) + b_h) \n",
-    "        y = np.dot(W_hy, h) + b_y\n",
-    "        p = np.exp(y) / np.sum(np.exp(y)) \n",
-    "        ix = np.random.choice(range(num_chars), p=p.ravel()) # ravel -> rank0\n",
-    "        # \"ix\" is a list of indexes selected according to the soft max probability.\n",
-    "        x = np.zeros((num_chars, 1)) # init\n",
-    "        x[ix] = 1 \n",
-    "        ixes.append(ix) # list\n",
-    "    txt = test_char + ''.join(int_to_char[i] for i in ixes)\n",
-    "    print ('----\\n %s \\n----' % (txt, ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predict('l', 50)"
+    "predict('', 15)"
    ]
   },
   {
