removed API Key

--- a/youtubeu_bw1.ipynb
+++ b/youtubeu_bw1.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyAtOhNS1k1TGX9uH0_c7xzo2xVEYRuhmJ8'"
+    "api_key = ''"
    ]
   },
   {
